k8/saltea-admin-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saltea-admin
  namespace: default
  labels:
    app: saltea-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: saltea-admin
  template:
    metadata:
      labels:
        app: saltea-admin
    spec:
      containers:
        - name: saltea-admin
          image: localhost:32000/saltea-admin:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
