k8/saltea-admin-service.yml
apiVersion: v1
kind: Service
metadata:
  name: saltea-admin
  namespace: default
spec:
  selector:
    app: saltea-admin
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
